[package]
name = "sc-wasm-rust"
version = "0.1.0"
authors = ["Rik Roots <rik.roots@rikworks.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
js-sys = "0.3.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

[dependencies.web-sys]
version = "0.3.47"
features = [
  "console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
